Added new function to split the ECM into one strip of a herring bone pattern to make figure 2b. Updated figure2b image creator script.

--- a/Makefile_uncoupled_uE
+++ b/Makefile_uncoupled_uE
@@ -194,7 +194,7 @@ zip-data:
 	mv *.zip data_archives/
 
 zip-source:
-	zip -r latest-data.zip Makefile* *.cpp *.h BioFVM/* config/* core/* custom_modules/* matlab/* modules/* output/*.m
+	zip -r latest-data.zip Makefile* *.cpp *.h BioFVM/* config/* core/* custom_modules/* python_imaging/* modules/* output/*.m
 	cp latest-data.zip $$(date +%b_%d_%Y_%H%M).zip
 	cp latest-data.zip VERSION_$(VERSION).zip 
 	mv *.zip data_archives/
