--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -17,4 +17,4 @@ jobs:
         
     - name: Run model
       run: |
-        ./AMIGOS-invasion
+        .\\AMIGOS-invasion
