Modified Github workflow tests.

--- a/.github/workflows/test-ubuntu.yml
+++ b/.github/workflows/test-ubuntu.yml
@@ -18,4 +18,4 @@ jobs:
         
     - name: Run model
       run: |
-        ./AMIGOS-invasion
+        ./AMIGOS-invasion config/leader_follower_model.xml
