--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -27,4 +27,4 @@ jobs:
         
     - name: Run model
       run: |
-        .\\AMIGOS-invasion
+        .\\AMIGOS-invasion config/leader_follower_model.xml
