--- a/.github/workflows/test-macos.yml
+++ b/.github/workflows/test-macos.yml
@@ -21,4 +21,4 @@ jobs:
         
     - name: Run model
       run: |
-        ./AMIGOS-invasion
+        ./AMIGOS-invasion config/leader_follower_model.xml
