Converted all models to use generalized code for cell-ECM interactions. Added additional gitactions for new models. Added additional modernization to code.

--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -24,7 +24,11 @@ jobs:
     - name: Build model
       run: |
         make
+        make invasive_spheroid
+        make fibrosis
         
     - name: Run model
       run: |
         .\\AMIGOS-invasion config/leader_follower_model.xml
+        .\\invasive_spheroid config/invasive_spheroid_update.xml
+        .\\fibrosis config/fibrosis.xml
