--- a/.github/workflows/test-macos.yml
+++ b/.github/workflows/test-macos.yml
@@ -18,7 +18,11 @@ jobs:
     - name: Build model
       run: |
         make PHYSICELL_CPP=g++-11
+        make invasive_spheroid PHYSICELL_CPP=g++-11
+        make fibrosis PHYSICELL_CPP=g++-11
         
     - name: Run model
       run: |
-        ./AMIGOS-invasion config/leader_follower_model.xml
+        ./AMIGOS-invasion config/simple_test2_random_1_D_circles.xml
+        ./invasive_spheroid config/invasive_spheroid_update.xml
+        ./fibrosis config/fibrosis.xml
