--- a/.github/workflows/test-ubuntu.yml
+++ b/.github/workflows/test-ubuntu.yml
@@ -16,6 +16,14 @@ jobs:
       run: |
         make
         
+    - name: Build model
+      run: |
+        make
+        make invasive_spheroid
+        make fibrosis
+        
     - name: Run model
       run: |
-        ./AMIGOS-invasion config/leader_follower_model.xml
+        ./AMIGOS-invasion config/simple_test2_random_1_D_circles.xml
+        ./invasive_spheroid config/invasive_spheroid_update.xml
+        ./fibrosis config/fibrosis.xml
