--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -29,6 +29,6 @@ jobs:
         
     - name: Run model
       run: |
-        .\\AMIGOS-invasion config/leader_follower_model.xml
-        .\\invasive_spheroid config/invasive_spheroid_update.xml
-        .\\fibrosis config/fibrosis.xml
+        .\\AMIGOS-invasion config\simple_test2_random_1_D_circles.xml
+        .\\invasive_spheroid config\invasive_spheroid_update.xml
+        .\\fibrosis config\fibrosis.xml
