updated code to use the PhysiCell random number generator ONLY. previously, some functions used BioFVM random number generator. Hopefully I got them all. Also updated the gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,72 @@ out*.txt
 final*.txt
 initial*.txt
 
+output/*.xml
+output/*.csv
+output/*.html
+output/*.txt
+!output/empty.txt
+output/detailed_rules.html
+output/detailed_rules.txt
+output/dictionaries.txt
+output/rules.html
+output/rules.txt
+
+fibrosis_test/*.xml
+fibrosis_test/*.csv
+fibrosis_test/*.html
+fibrosis_test/*.txt
+!fibrosis_test/empty.txt
+fibrosis_test/detailed_rules.html
+fibrosis_test/detailed_rules.txt
+fibrosis_test/dictionaries.txt
+fibrosis_test/rules.html
+fibrosis_test/rules.txt
+fibrosis_test/*.py
+fibrosis
+
+invasive_carcinoma_output/*.xml
+invasive_carcinoma_output/*.csv
+invasive_carcinoma_output/*.html
+invasive_carcinoma_output/*.txt
+!invasive_carcinoma_output/empty.txt
+invasive_carcinoma_output/detailed_rules.html
+invasive_carcinoma_output/detailed_rules.txt
+invasive_carcinoma_output/dictionaries.txt
+invasive_carcinoma_output/rules.html
+invasive_carcinoma_output/rules.txt
+invasive_carcinoma/*.py
+invasive_carcinoma
+
+leader_follower/*.xml
+leader_follower/*.csv
+leader_follower/*.html
+leader_follower/*.txt
+!leader_follower/empty.txt
+leader_follower/detailed_rules.html
+leader_follower/detailed_rules.txt
+leader_follower/dictionaries.txt
+leader_follower/rules.html
+leader_follower/rules.txt
+leader_follower/*.py
+
+simple_test0/
+simple_test1/
+simple_test2/PhysiCell_settings.xml
+simple_test2/cell_rules.csv
+simple_test2/detailed_rules.html
+simple_test2/detailed_rules.txt
+simple_test2/dictionaries.txt
+simple_test2/rules.html
+simple_test2/rules.txt
+simple_test2/simple_test2_random_1_D_circles.xml
+simple_test2/simple_test_movies_cells_only.py
+simple_test2/simple_test_stills_cells_and_environment_only.py
+simple_test3/
+simple_test4/
+
+stochastic_replicates/
+
 # Development
 *.xcworkspace
 .vscode*
